# kcm

./: Makefile.am  configure.ac
data/: Makefile.am  dcm.conf  edu.cmu.cs.diamond.opendiamond.dcm.service.in  edu.cmu.cs.kimberley.kcm.service.in
debian/: changelog  control  copyright  files  rules
src/: Makefile.am  avahi.c  avahi.h  cert_input  client.c  common.c  common.h  dcm-avahi.c  dcm-avahi.h  dcm-glib.h  dcm.c  dcm.h  dcm.xml  dcm_encrypt  example_client.c  example_client.py  example_server.c  kcm-glib.h  kcm.c  kcm.h  kcm.xml  kcm_encrypt  server.c
